# onuw-eval

./: .gitignore  README.md  pyproject.toml
onuw_benchmark/: __init__.py  __main__.py  agents.py  cli.py  engine.py  openrouter.py  report.py  roles.py  schemas.py
results/: onuw_openrouter_20260623_015008.html  onuw_openrouter_20260623_015008.json  onuw_openrouter_20260623_022133.html  onuw_openrouter_20260623_022133.json
tests/: test_cli.py  test_engine.py  test_openrouter.py  test_report.py
