[project]
name = "ultimate-werewolf-benchmark"
version = "0.1.0"
description = "Benchmark harness for One Night Ultimate Werewolf LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
onuw-benchmark = "onuw_benchmark.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
